trying to fix the title of the caroussel not showing

--- a/css/index.css
+++ b/css/index.css
@@ -89,7 +89,6 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  align-items: center;
   justify-content: center;
   height: 400px;
   gap: 5px;
@@ -102,7 +101,6 @@ body {
   display: flex;
   flex-direction: row;
   width: 100%;
-  align-items: center;
   justify-content: center;
   height: 200px;
   gap: 5px;
